--- a/build.gradle
+++ b/build.gradle
@@ -20,21 +20,21 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	//testImplementation 'org.springframework.security:spring-security-test'
 
 	// JSTL
 	implementation 'javax.servlet:jstl'	
 	// JSP 탬플릿 엔진							
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	// Security 태그 라이브러리		
-	implementation 'org.springframework.security:spring-security-taglibs'
+	//implementation 'org.springframework.security:spring-security-taglibs'
 }
 
 tasks.named('test') {
